src/main/resources/grammar.ebnf
program ::= stmt*

stmt ::= let_stmt `;` | add_expr `;`

let_stmt ::= `:` id `=` add_expr

add_expr ::= mult_expr ((`+`|`-`) mult_expr)+

mult_expr ::= power_expr ((`*`|`/`) power_expr)+

power_expr = unary_expr (`^` unary_expr)+

unary_expr ::= (`+`|`-`)? atom |

atom ::= number | id | `(` add_expr `)` | id `(` add_expr `)`
